refactor: extracts aeron configuration to facilitate live coding bootstrap